fix: add label for displaying selected endianness

--- a/src/ui/win.ui
+++ b/src/ui/win.ui
@@ -247,6 +247,14 @@
                                     </child>
                                     <child>
                                       <object class="GtkLabel">
+                                        <property name="label">LE</property>
+                                        <style>
+                                          <class name="dim-label" />
+                                        </style>
+                                      </object>
+                                    </child>
+                                    <child>
+                                      <object class="GtkLabel">
                                         <property name="label">Binary</property>
                                         <style>
                                           <class name="dim-label" />
